# generate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
generate/: __init__.py  __main__.py  folder.py  nodes.py  parser.py  substitute.py
test/: test_code_from_readme.py  test_import.py
test/input_dir/: __gen__.py  code.py  p.template
